[package]
name = "mlab_http"
version = "0.1.0"
edition = "2021"

[features]
log = []

[dependencies]
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }

[[example]]
name = "simple"
required-features = ["log"]